# suture

./: README.md
backend/: Dockerfile  README.md  pyproject.toml
backend/backend/: db.py  main.py  models.py  s3.py  stt.py  terraform.tfstate
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/actions/: create-project.ts
frontend/app/login/: page.tsx
frontend/app/project/[id]/: page.tsx
frontend/app/project/[id]/chat/: page.tsx
frontend/app/project/[id]/edit/: page.tsx
frontend/app/project/[id]/export/: page.tsx
frontend/app/project/[id]/share/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: export-modal.tsx  llm-chat-window.tsx  project-nav.tsx  share-modal.tsx  side-nav.tsx  speaker-button.tsx  speaker-context-menu.tsx  tools-sidebar.tsx  top-bar.tsx  transcript-sentence.tsx  transcription-card.tsx  word.tsx
frontend/components/ui/: button.tsx
frontend/lib/: api-client.ts
frontend/types/: project.ts
infra/: main.tf  variables.tf
